<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/eventsMenuItem"
        android:icon="@drawable/ic_event"
        android:title="@string/events_title" />

    <item
        android:id="@+id/scheduleMenuItem"
        android:icon="@drawable/ic_schedule"
        android:title="@string/schedule_title" />
</menu>